# TextAdventureWoWHardcoreChallenge

./: .gitignore  .luarc.json  .pkgmeta  EXTRACTION_GUIDE.md  README.md  TUTORIAL.md  TextAdventurer.toc  TextAdventurer.toc.txt  TextAdventurer_BACKUP.lua  TextAdventurer_BACKUPRECENT0417.lua  TextAdventurer_BACKUP_ACEEVENT_20260424.lua  TextAdventurer_backuponemore.lua  WarlockSheetData.lua  textadventurer.lua
Modules/: AccessibilityCommands.lua  AsciiMap.lua  Awareness.lua  Breath.lua  CellMath.lua  CharacterReports.lua  CombatNarration.lua  Commands.lua  DFDanger.lua  DFMode.lua  DPSReports.lua  EconomyCommands.lua  GuidelimeRoute.lua  HelpTopics.lua  InputBoxLayout.lua  IntegrationAPI.lua  ItemTextAndExploration.lua  LootRollCommands.lua  MLXPRecommend.lua  MLXPTracker.lua  MacroRecipeCommands.lua  MacrosAndBindings.lua  MailCommands.lua  MarkedCells.lua  MovementAndBearing.lua  NavigationCommands.lua  OreNodes.lua  PaladinCommands.lua  PaladinSealDPS.lua  Profiler.lua  QuestCommands.lua  QuestNarration.lua  QuestReports.lua  QuestRouter.lua  Routing.lua  ScreenshotFilter.lua  SettingsAndPerformance.lua  SettingsCommands.lua  Skills.lua  SocialCommands.lua  (+15 more)
test/: QUICKSTART.txt  README.md  SETUP.md  (+4 more)
tools/terrain_compiler/: README.md  compile_maps.ps1  example_compile.ps1  pyproject.toml  verify_extraction.ps1
tools/terrain_compiler/terrain_compiler/: __init__.py  binary.py  cli.py  exporter_lua.py  mathutils.py  models.py  parsers.py  pipeline.py
tools/terrain_compiler/wow_terrain_compiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+21 files in other folders)
