[project]
name = "wow-terrain-compiler"
version = "0.1.0"
description = "External terrain compiler for TextAdventurer DFMode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
terrain-compiler = "terrain_compiler.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
